new Double(...) replaced with Double.valueOf(...)